Fixed when internal link is behind web link causes error

--- a/src/less/search-bar.less
+++ b/src/less/search-bar.less
@@ -21,6 +21,10 @@
     > .text-input {
       width: 100%;
       font-size: 15px;
+
+      &:hover {
+        box-shadow: 0 0 0 1px var(--background-modifier-border-hover);
+      }
     }
 
     &:hover {
